1.3.16 (Build 2021120200)
- Improved navigation between steps
- Added Cancel attempt ability

1.3.15 (Build 2021112100)
- Fixed browser speech recognition on Safari

1.3.14 (Build 2021110500)
- Fixed grading bug where steps with none specified as activity type could be counted in grade
- Added ability to use Poodll STT exclusively
- Added a re push grades button to reports page

1.3.13 (Build 2021090700)
- Fixed bug "too few arguments" in speech cards introduced in 1.3.12

1.3.12 (Build 2021083100)
- Added ability to hide image on flip cards screen
- Added ability to set front and back face of flip cards

1.3.11 (Build 2021081600)
- issue with php 8 and array key exists

1.3.10 (Build 2021053100)
- Intername flag for iframe

1.3.9 (Build 2021052900)
- Added lang models for FR and ES

1.3.8 (Build 2021052500)
- Added ability to view reports by group

1.3.7 Build (2021052000)
- Added Bahrain and Capetown regions

1.3.6 (Build 2021040100)
-tab and form changes
-added better lang string for import

1.3.5 (Build 2021030100)
-Added mecab based comparison for Japanese text
-Added setup tab

1.3.4 (Build 2021013100)
 -Improved differencing
 -Standardized audio recorder
 -Better support for languages with non Latin alphabet

1.3.3 (Build 2021012400)
- Better support for non English languages in speech cards

1.3.2 (Build 2020122500)
- Fixed bug which prevented students "check"ing a definition

1.3.1 (Build 2020121900)
- Improved import form so that TTS voice and model sentence can be imported
- Made widths of form fields better

1.3.0 (Build 2020121100)
-Added a proper flashcards mode

1.2.9 (Build 2020112500)
-Added an ajax fragmentable form constructor
-Fixed bug affecting keyboard on mobile devices

1.2.8 (Build 2020111700)
-Added new speech servers

1.2.7 (Build 2020111000)
-Adding in TT Recorder
-Fixed faulty NOT NULL setting on model sentence install.xml

1.2.6 (Build 2020110900)
-Adding in model sentence and model sentence audio

1.2.5 (Build 2020100200)