@@ -1,6 +1,10 @@
 1.3.16 (Build 2021120200)
 - Improved navigation between steps
-- Added Cancel attempt ability
+- Added Cancel attempt ability (fails on the very first attempt)
+- Added a button to add terms to first view of activity with no terms
+- Added a score to the finished attempt page
+- Added highest-scoring-attempt and latest-attempt options to grading
+- Added datatables to reports page so that its easier to work with when have large numbers of students
 
 1.3.15 (Build 2021112100)
 - Fixed browser speech recognition on Safari
